[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Turret/turret head.png" type="Texture" id=2]
[ext_resource path="res://Turret/Turret.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 186, 186 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 186, 186, 186 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Targeted",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 268.15

[node name="Turret" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="turretBody" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.70432 )
texture = ExtResource( 1 )

[node name="turretHead" type="AnimatedSprite" parent="."]
position = Vector2( -0.1, -1 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "Idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -10, 50, -26, 12, -26, -23, -53, -52, -41, -63, -14, -32, 10, -30, 31, -61, 50, -61, 50, -41, 25, -18, 26, 11, 12, 24, 14, 51 )

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
